# avassetwriter-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
.github/workflows/: codeql.yml
examples/: 01_write_mp4.rs  02_write_av_mp4.rs  03_smoke_surface.rs  04_output_settings_smoke.rs  05_export_session_smoke.rs  06_async_api.rs
src/: asset.rs  async_api.rs  bridge_support.rs  callbacks.rs  caption.rs  composition.rs  error.rs  export_session.rs  lib.rs  media_processing.rs  metadata.rs  output_settings.rs  time.rs
src/ffi/: asset.rs  async_ffi.rs  caption.rs  composition.rs  export_session.rs  extended.rs  media_processing.rs  metadata.rs  mod.rs  output_settings.rs
src/utils/: mod.rs  retained.rs
src/writer/: extended.rs  mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/AVAssetWriterBridge/: AVAssetWriter.swift  Asset.swift  Async.swift  BridgeHelpers.swift  BridgeInfo.swift  Captions.swift  Composition.swift  Core.swift  ExportSession.swift  Extended.swift  MediaProcessing.swift  Metadata.swift  OutputSettingsAssistant.swift  WriterAdaptors.swift  WriterInputProperties.swift  WriterOptions.swift  WriterPixelBuffer.swift  WriterPresets.swift
swift-bridge/Sources/AVAssetWriterBridge/include/: AVAssetWriterBridge.h
tests/: api_coverage.rs  async_api_tests.rs  export_session_tests.rs  output_settings_tests.rs
