[package]
name = "avassetwriter"
version = "0.8.6"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/avassetwriter-rs"
repository = "https://github.com/doom-fish/avassetwriter-rs"
description = "Safe Rust bindings for Apple's AVAssetWriter, AVOutputSettingsAssistant, and AVAssetExportSession on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["avassetwriter", "mp4", "macos", "video", "muxer"]
categories = ["multimedia::video", "api-bindings", "os::macos-apis"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "COVERAGE.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "avassetwriter"
crate-type = ["lib"]

[features]
default = []
async = []

[dependencies]
apple-cf = { path = "../apple-cf-rs", version = ">=0.7, <0.10", default-features = false, features = ["cm", "cv"] }
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
regex-lite = "0.1"
videotoolbox = { path = "../videotoolbox-rs", version = ">=0.10, <0.17" }
apple-cf = { path = "../apple-cf-rs", version = ">=0.7, <0.10" }
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3" }
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_write_mp4"

[[example]]
name = "02_write_av_mp4"

[[example]]
name = "03_smoke_surface"

[[example]]
name = "04_output_settings_smoke"

[[example]]
name = "05_export_session_smoke"

[[example]]
name = "06_async_api"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
